replace .collect(Collectors.toList()) with toList (#2905)
* replace .collect(Collectors.toList()) with toList

> Stream.toList() provides a List implementation that is immutable (type ImmutableCollections.ListN that cannot be added to or sorted) similar to that provided by List.of() and in contrast to the mutable (can be changed and sorted) ArrayList provided by Stream.collect(Collectors.toList()).

* Fix unused and star imports

* Fix type errors when moving to toList()

By reverting back to collect

* More unused imports

---------

Co-authored-by: Tim Yates <tim.yates@gmail.com>