@@ -15,6 +15,8 @@
  */
 package io.micronaut.data.model;
 
+import io.micronaut.core.annotation.NonNull;
+import io.micronaut.core.annotation.Nullable;
 import io.micronaut.core.beans.BeanIntrospection;
 import io.micronaut.core.naming.NameUtils;
 import io.micronaut.core.util.ArgumentUtils;
@@ -24,11 +26,13 @@ import io.micronaut.data.annotation.Embeddable;
 import io.micronaut.data.model.naming.NamingStrategy;
 import io.micronaut.data.model.runtime.RuntimePersistentEntity;
 
-import io.micronaut.core.annotation.NonNull;
-import io.micronaut.core.annotation.Nullable;
-
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Optional;
 
 import static io.micronaut.data.model.AssociationUtils.CAMEL_CASE_SPLIT_PATTERN;
 
@@ -139,7 +143,7 @@ public interface PersistentEntity extends PersistentElement {
                 .stream()
                 .filter(bp -> bp instanceof Association)
                 .map(bp -> (Association) bp)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -152,7 +156,7 @@ public interface PersistentEntity extends PersistentElement {
         return getPersistentProperties().stream()
                 .filter(p -> p instanceof Embedded)
                 .map(p -> (Embedded) p)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -236,7 +240,7 @@ public interface PersistentEntity extends PersistentElement {
     default Optional<String> getPath(String camelCasePath) {
         List<String> path = Arrays.stream(CAMEL_CASE_SPLIT_PATTERN.split(camelCasePath))
                                   .map(NameUtils::decapitalize)
-                                  .collect(Collectors.toList());
+                                  .toList();
 
         if (CollectionUtils.isNotEmpty(path)) {
             Iterator<String> i = path.iterator();
