@@ -51,7 +51,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static io.micronaut.data.model.jpa.criteria.impl.CriteriaUtils.hasVersionPredicate;
 import static io.micronaut.data.model.jpa.criteria.impl.CriteriaUtils.notSupportedOperation;
@@ -118,7 +117,7 @@ public abstract class AbstractPersistentEntityCriteriaQuery<T> implements Persis
                     return Sort.Order.asc(name);
                 }
                 return Sort.Order.desc(name);
-            }).collect(Collectors.toList());
+            }).toList();
             qm.sort(Sort.of(sortOrders));
         }
         for (Map.Entry<String, Joiner.Joined> e : joiner.getJoins().entrySet()) {
@@ -214,7 +213,7 @@ public abstract class AbstractPersistentEntityCriteriaQuery<T> implements Persis
         Objects.requireNonNull(restrictions);
         if (restrictions.length > 0) {
             predicate = restrictions.length == 1 ? restrictions[0] : new ConjunctionPredicate(
-                    Arrays.stream(restrictions).sequential().map(x -> (IExpression<Boolean>) x).collect(Collectors.toList())
+                    Arrays.stream(restrictions).sequential().map(x -> (IExpression<Boolean>) x).toList()
             );
         } else {
             predicate = null;
