@@ -45,7 +45,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import static io.micronaut.data.processor.visitors.Utils.getConfiguredDataConverters;
 import static io.micronaut.data.processor.visitors.Utils.getConfiguredDataTypes;
@@ -107,7 +106,7 @@ public class MappedEntityVisitor implements TypeElementVisitor<MappedEntity, Obj
 
         final List<AnnotationValue<Index>> indexes = properties.stream()
                 .flatMap(prop -> prop.findAnnotation(Index.class).stream())
-                .collect(Collectors.toList());
+                .toList();
 
         if (!indexes.isEmpty()) {
            element.annotate(Indexes.class, builder -> builder.values(indexes.toArray(new AnnotationValue[]{})));
